[package]
name = "rust-cryptography-uncloak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.1"
hex = "0.4.3"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }


[workspace]
members = [

]

exclude = []